--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -743,6 +743,9 @@
   color: #FFF;
   font-size: .34rem;
 }
+.userInfo .closeBtn {
+  width: 4.8rem;
+}
 .userInfo .noFix {
   margin: .5rem .3rem auto;
 }
